.provarCaches/00D5f000005vwGkEAI/objects/rstkf__arcntl__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_arcntl</customHelpPage>
    <description>arcntl__c</description>
    <fields>
        <fullName>rstkf__arcntl_allowpaymenttosisterco__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, related companies can process payments for this company</inlineHelpText>
        <label>Sister Companies Can Receive Our Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_allowsistercotousecrmemo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, related companies can apply credit for this company</inlineHelpText>
        <label>Sister Companies Can Apply Our CR Memos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_allowxtradisc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>arcntl_allowxtradisc__c</description>
        <inlineHelpText>Enabling this field allows users to specify a Discount Amount in the Cash Receipts page in excess of the amount allowed. It does not apply where no discount is allowed. Entry of a higher amount drives an increase to the AR Txn discount percentage.</inlineHelpText>
        <label>Allow More Discount Than Available in CR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_applysistercocrmemo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this company can apply related companies&apos; credit memos</inlineHelpText>
        <label>We Can Apply Sister Company&apos;s CR Memos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_arbatchopt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, multiple Receivable Transactions can be contained within a session. When unchecked, each Receivable Transaction is its own session (one-for-one).</inlineHelpText>
        <label>Multiple Transactions per Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_bankacctpolicy__c</fullName>
        <inlineHelpText>How Bank Account is set on Receivable Transaction. If there is only 1 Bank Acct, set to Constant so it is always used. If multiple Bank Accts, if set to Default, will default to the Default Bank Acct value, or set to No Default so Bank has to be entered.</inlineHelpText>
        <label>Default Bank Account Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Constant</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>No default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_bankdefltcrcarddepoffset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used as the default credit card clearing account for this Financial Company.  AR Account Type must be &apos;Credit Card Clearing&apos;.</inlineHelpText>
        <label>Cash Receipts CC Pay Offset to AR Acct</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Cash Receipts CC Pay Offset to A/R Acct)</relationshipLabel>
        <relationshipName>arcntls8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_bankdepvarmulticurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to charge payment variances where multi-currency is used.  AR Account Type must be ‘Bank Deposit Variance’ or ‘Bank Deposit Variance - Foreign Currency’</inlineHelpText>
        <label>Multi-Currency Payment Variance Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Currency Rounding Variance Account - MC)</relationshipLabel>
        <relationshipName>arcntls10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_bankdepvarsinglecurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to charge payment variances where single-currency is used.  AR Account Type must be ‘Bank Deposit Variance’</inlineHelpText>
        <label>Single-Currency Payment Variance Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Currency Rounding Variance Account - SC)</relationshipLabel>
        <relationshipName>arcntls9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_cashtoglpolicy__c</fullName>
        <inlineHelpText>Controls whether cash receipt user can override, must enter, or cannot choose the account to be credited on Cash to GL transactions</inlineHelpText>
        <label>Cash Receipts Cash to GL Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Constant</fullName>
                </value>
                <value>
                    <fullName>Allow Override</fullName>
                </value>
                <value>
                    <fullName>Never Default</fullName>
                </value>
                <value>
                    <fullName>Always Default</fullName>
                    <isActive>false</isActive>
                    <label>Always Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_compoundfinancecharges__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, finance charges only apply to the principal amount (not compounded).</inlineHelpText>
        <label>Finance Charge on Principal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_crcardprocfeeacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to book any credit card processing fee when doing Bank Reconciliation. AR Account Type must be &apos;Credit Card Processing Fee&apos;.</inlineHelpText>
        <label>Bank Reconcile - CC Processing Fee Acct</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Bank reconciliation - CC proc fee acc)</relationshipLabel>
        <relationshipName>arcntls12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_createzerobalstmts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, statement for zero-balance Customers are created</inlineHelpText>
        <label>Create Zero-Balance Statements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_currentbalmessage__c</fullName>
        <inlineHelpText>Text used for statements showing non-zero but current-balances</inlineHelpText>
        <label>Current-Balance Statement Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltaracct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default AR Control Account for the given company. Dropdown is filtered to only display those GL Accounts where the AR Account Type = Accounts Receivable.  Can be overridden on the Customer Company record.</inlineHelpText>
        <label>Default Accounts Receivable Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (GL Account)</relationshipLabel>
        <relationshipName>arcntls11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltbankacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Bank Account typically used for cash received by this Financial Company</inlineHelpText>
        <label>Default Bank Account</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls</relationshipLabel>
        <relationshipName>arcntls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltcashrcpts_discnt__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to book cash receipt discounts allowed.  AR Account Type must be &apos;Cash Discounts Allowed’.</inlineHelpText>
        <label>Cash Receipt Discounts Allowed Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Cash Receipt Discounts Allowed Account)</relationshipLabel>
        <relationshipName>arcntls6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltcashrcpts_gain__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to book any currency gains from AR transactions.  AR Account Type must be ‘Foreign Exchange Variance’.</inlineHelpText>
        <label>AR Foreign Exchange Gain Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Cash Receipt  Currency Gain Account)</relationshipLabel>
        <relationshipName>arcntls3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltcashrcpts_glcash__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The account to be credited on cash-to-GL transactions.  See also Cash Receipts Cash to GL Policy.  Cannot be set to a cash or capital account (which are filtered out of dropdown).</inlineHelpText>
        <label>Cash to GL Offset Acct Default</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Cash Receipts Def Cash to GL Offset Acct)</relationshipLabel>
        <relationshipName>arcntls7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltcashrcpts_loss__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to book any currency losses from AR transactions. AR Account Type must be ‘Foreign Exchange Variance’. Account would typically be the same as &apos;Cash Receipt Currency Gain Account&apos;, but it is not required that the gain and loss accounts be the same.</inlineHelpText>
        <label>AR Foreign Exchange Loss Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Cash Receipt  Currency Loss Account)</relationshipLabel>
        <relationshipName>arcntls4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltcashrcpts_rounding__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>When payment currency differs from bank currency and there is a home currency rounding difference between the two, the difference is posted to this account.  AR Account Type must be ‘Cash Receipts Multicurrency Rounding’</inlineHelpText>
        <label>Cash Receipt Curr Round Cash Offset Acct</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Cash Receipt Curr Round Cash Offset Acct)</relationshipLabel>
        <relationshipName>arcntls5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltcashrcpts_writeoff__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Account to which write-off transactions are debited and write-up transactions are credited  AR Account Type must be ‘Write-off/Write-up’.</inlineHelpText>
        <label>Cash Receipt Write-Off / Up Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Cash Receipt  Write-Off Debit Account)</relationshipLabel>
        <relationshipName>arcntls2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_emailtadhocsstmt__c</fullName>
        <description>arcntl_emailtadhocsstmt__c</description>
        <label>Default Ad Hoc Cust Statement Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_emailtmemo__c</fullName>
        <description>Form Template for AR Memo Print</description>
        <inlineHelpText>Template to be used as the default form template for AR Debit Memos</inlineHelpText>
        <label>Form Template for AR Memo Print</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_emailtstatements__c</fullName>
        <description>arcntl_emailtstatements__c</description>
        <label>Default Customer Statement Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchargedays__c</fullName>
        <inlineHelpText>The number of days late after which finance charges will be applied. This default can be overridden for a given Customer on the appropriate Customer Company record.</inlineHelpText>
        <label>Finance Charge on Balances This Late</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchargedrmemos__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, finance charges will be computed on Debit Memos.  This &quot;policy&quot; can be overridden on the appropriate Customer Company record for a given Customer.</inlineHelpText>
        <label>Finance Charge on Debit Memos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchargepct__c</fullName>
        <inlineHelpText>The monthly finance charge percentage to be applied to late balances. This can also be overridden on the appropriate Customer Company record for a given Customer.</inlineHelpText>
        <label>Finance Charge Monthly Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgdrmemotext__c</fullName>
        <inlineHelpText>Text to be used on Debit Memos for finance charges, up to 255 characters in length.  Value can be overridden on the appropriate Customer Company record for a given Customer.</inlineHelpText>
        <label>Finance Charge Debit Memo Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchginterestaccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to post interest earned on finance charges.  AR Account type must be  ‘Finance Charge Interest Earned’</inlineHelpText>
        <label>Finance Charges Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Finance Charges Earned Interest Account)</relationshipLabel>
        <relationshipName>arcntls07</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchglatepaytrigger__c</fullName>
        <inlineHelpText>Criteria used to trigger a finance charge against a past-due payment.  Options:

1. N/A (there is no finance charge)
2. Must Be Past Due At Month Start
3. Falls Due During The Month</inlineHelpText>
        <label>Finance Charge Late Payment Trigger</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Must Be Past Due At Month Start</fullName>
                </value>
                <value>
                    <fullName>Falls Due During The Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgmemotext__c</fullName>
        <inlineHelpText>The text to be printed on Debit Memos for finance charges, up to 255 characters in length</inlineHelpText>
        <label>ZZ-Obsolete Finance Charge Memo Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgminimum__c</fullName>
        <inlineHelpText>If a non-zero finance charge is computed that is greater than the finance charge threshold but less than this amount, substitute this amount</inlineHelpText>
        <label>Finance Charge Minimum</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgpartialpaypolicy__c</fullName>
        <inlineHelpText>Defines how partial payments will be handled with regards to payments received during the month.  Options:

1. N/A (no finance charge)
2. Forgive Partially Paid Invoices
3. Charge Whole Month as Month End Balance
4. Charge Day by Day</inlineHelpText>
        <label>Partial Payment During Month Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Forgive Partially Paid Invoices</fullName>
                </value>
                <value>
                    <fullName>Charge Whole Month as Month End Balance</fullName>
                </value>
                <value>
                    <fullName>Charge Day by Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgproratemethod__c</fullName>
        <inlineHelpText>Defines how finance charges applied during a given month will be calculated. Options:

1. N/A (no finance charge)
2. 30-Day Method (will be calculated as the entire month)
3. Actual Days Method (will be calculated based on the actual number of days)</inlineHelpText>
        <label>Due in Month Proration Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>30-Day Method</fullName>
                </value>
                <value>
                    <fullName>Actual Days Method</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgshowdetails__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the finance charge calculation will be shown on the statement</inlineHelpText>
        <label>Show Finance Charge in Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgstmttext__c</fullName>
        <inlineHelpText>Text to appear on statements when a finance charge is actually charged</inlineHelpText>
        <label>Finance Charge Statement Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgthreshhold__c</fullName>
        <inlineHelpText>If a non-zero finance charge is computed that is less than this amount, there will be no finance charge to Customer</inlineHelpText>
        <label>Finance Charge Threshold</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Company for which this record pertains</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls</relationshipLabel>
        <relationshipName>arcntls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_interestexpacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to book any Interest Expense when doing Bank Reconciliation.  AR Account Type must be &apos;Interest Expense&apos;.</inlineHelpText>
        <label>Bank Reconcile - Interest Expense Acct</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Bank Reconcile - Interest Expense Acct)</relationshipLabel>
        <relationshipName>arcntls14</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_interestincomeacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to book any Interest Income when doing Bank Reconciliation.  AR Account Type must be &apos;Interest Income&apos;.</inlineHelpText>
        <label>Bank Reconcile - Interest Income Acct</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Bank Reconcile - Interest Income Acct)</relationshipLabel>
        <relationshipName>arcntls13</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_large_balance_w_o_limit__c</fullName>
        <inlineHelpText>Write-off limit threshold for large-balance write-off policy</inlineHelpText>
        <label>Maximum Write Off Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_large_balance_w_u_limit__c</fullName>
        <inlineHelpText>Write-up limit threshold for large-balance write-up policy</inlineHelpText>
        <label>Maximum Write Up Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_lastagedate__c</fullName>
        <label>Date of Last Aging Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_latebalnofinchgmessage__c</fullName>
        <inlineHelpText>Text to be used on statements where there is a late balance but no finance charge</inlineHelpText>
        <label>Late-Balance, No Finance Charge Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_minfinchgtextline__c</fullName>
        <inlineHelpText>Text to be used when the minimum finance charge is applied, up to 110 characters in length</inlineHelpText>
        <label>Minimum Finance Charge Statement Text</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_nonminfinchgtextline__c</fullName>
        <inlineHelpText>When calculated Finance charge exceeds the Minimum Finance Charge (up to 110 characters in length)</inlineHelpText>
        <label>Non-Min Finance Charge Statement Text</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_notxndelete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>arcntl_notxndelete__c</description>
        <label>Prevent Delete of Receivable Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_receiveintercocash__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, can process payments for related companies</inlineHelpText>
        <label>We Can Receive Sister Companies&apos; Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_showapplied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>arcntl_showapplied__c</description>
        <inlineHelpText>This indicator is used to default the Customer Company field where it causes transactions that are applied during the Statement Period to be shown on the Customer Statement.</inlineHelpText>
        <label>Show Applied Transactions in Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_small_balance_w_o_limit__c</fullName>
        <inlineHelpText>Write-off limit threshold for small-balance write-off policy</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_small_balance_w_u_limit__c</fullName>
        <inlineHelpText>Write-up limit threshold for small-balance write-up policy</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_statementpdend__c</fullName>
        <description>arcntl_statementpdend__c</description>
        <inlineHelpText>This field allows for the definition of the AR Statement Period which by default is a calendar month. (Example: entering 25 here would be Jan 26 – Feb 25,  Feb26 - Mar25, etc.)</inlineHelpText>
        <label>AR Statement Period End Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End of Month</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_statementpolicy__c</fullName>
        <inlineHelpText>Statement options are shown in dropdown and may be overridden on the Customer Company record for individual Customers</inlineHelpText>
        <label>AR Statement Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Statements Or Finance Charges</fullName>
                    <default>true</default>
                    <label>No Statements Or Finance Charges</label>
                </value>
                <value>
                    <fullName>Statements - But No Finance Charges Ever</fullName>
                </value>
                <value>
                    <fullName>Print Statements, No Finance Charges</fullName>
                </value>
                <value>
                    <fullName>Print Statements, Show Finance Charges, Do Not Book</fullName>
                </value>
                <value>
                    <fullName>Print Statements With Finance Charges And Book Them</fullName>
                </value>
                <value>
                    <fullName>Statements -  But No Finance Charges Ever</fullName>
                    <isActive>false</isActive>
                    <label>Statements -  But No Finance Charges Ever</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_writeoff_policy__c</fullName>
        <inlineHelpText>Policy for writing off balances due using applicable limits defined below.  Options:

1. Never
2. Small Balances Only
3. Large Balances Only
4. Small and Large Balances</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Small Balances Only</fullName>
                </value>
                <value>
                    <fullName>Large Balances Only</fullName>
                </value>
                <value>
                    <fullName>Small and Large Balances</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_writeup_policy__c</fullName>
        <inlineHelpText>Policy for writing up balances due using applicable limits defined below.  Options:

1. Never 
2. Small Balances Only 
3. Large Balances Only 
4. Small and Large Balances</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Small Balances Only</fullName>
                </value>
                <value>
                    <fullName>Large Balances Only</fullName>
                </value>
                <value>
                    <fullName>Small and Large Balances</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_zerobalmessage__c</fullName>
        <inlineHelpText>Text to be used in statement when statement balance is zero</inlineHelpText>
        <label>Zero-Balance Statement Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__arcntl_glcmp__r.rstkf__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__arcntl_glcmp__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Accounts Receivable Control</label>
    <listViews>
        <fullName>rstkf__RS_AR_Control</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcntl_glcmp__c</columns>
        <columns>rstkf__arcntl_arbatchopt__c</columns>
        <columns>rstkf__arcntl_cashtoglpolicy__c</columns>
        <columns>rstkf__arcntl_dfltaracct__c</columns>
        <columns>rstkf__arcntl_bankacctpolicy__c</columns>
        <columns>rstkf__arcntl_dfltbankacct__c</columns>
        <columns>rstkf__arcntl_statementpolicy__c</columns>
        <columns>rstkf__arcntl_createzerobalstmts__c</columns>
        <columns>rstkf__arcntl_finchargedays__c</columns>
        <columns>rstkf__arcntl_finchargepct__c</columns>
        <columns>rstkf__arcntl_finchgshowdetails__c</columns>
        <columns>rstkf__arcntl_writeup_policy__c</columns>
        <columns>rstkf__arcntl_writeoff_policy__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>AR Control</label>
        <language>en_US</language>
    </listViews>
</CustomObject>